--- a/millywebapp/templates/deployment.yaml
+++ b/millywebapp/templates/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: helmdeployment
-  namespace: default
+  namespace: helm-deployment
   labels:
     app: mywebapp
 spec:
@@ -27,8 +27,8 @@ spec:
             name: myconfigmapv1.0
         resources:
           requests:
-            memory: "5Mi" 
-            cpu: "5m"    # 50 milli cores (1/20 CPU)
+            memory: "64Mi" 
+            cpu: "50m"    # 50 milli cores (1/20 CPU)
           limits:
-            memory: "5Mi" # 128 mebibytes 
-            cpu: "5m"
+            memory: "128Mi" # 128 mebibytes 
+            cpu: "100m"
