--- a/millywebapp/templates/service.yaml
+++ b/millywebapp/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mywebapp
-  namespace: default
+  namespace: helm-deployment
   labels:
     app: mywebapp
 spec:
